# reactos

base/setup/usetup/: usetup.c
boot/: CMakeLists.txt
boot/bootdata/: CMakeLists.txt  hiveinst.inf  hivesys.inf  livecd.inf  livecd.ini  txtsetup.sif
boot/freeldr/freeldr/ntldr/: setupldr.c
drivers/hid/hidclass/: hidclass.c  pdo.c  precomp.h
drivers/hid/mouhid/: mouhid.c
drivers/storage/class/: CMakeLists.txt
drivers/storage/class/classpnp/: autorun.c  class.c  debug.c  debug.h  lock.c  power.c  utils.c
drivers/storage/class/disk/: CMakeLists.txt
drivers/storage/class/disk_new/: CMakeLists.txt  diskdev.inf
drivers/usb/usbccgp/: pdo.c
drivers/usb/usbhub/: pnp.c  usbhub.h
drivers/usb/usbhub_new/: CMakeLists.txt
media/inf/: AMDXHCI.INF  CMakeLists.txt  amdhub30.inf  amdxhc.inf  amdxhci.inf  display.inf  keyboard.inf  machine.inf  msmouse.inf  ports.inf  syssetup.inf  syssetup.inf.tpl
ntoskrnl/: ntos.cmake
ntoskrnl/config/: cmapi.c
ntoskrnl/include/internal/: io.h
ntoskrnl/io/iomgr/: driver.c  iomgr.c  ramdisk.c
ntoskrnl/io/pnpmgr/: pnpenum.c  pnpinit.c  pnpmgr.c  pnpnode.c
sdk/cmake/: CMakeMacros.cmake
win32ss/drivers/displays/: CMakeLists.txt
win32ss/drivers/displays/framebuf/: CMakeLists.txt
win32ss/drivers/displays/framebuf_old/: CMakeLists.txt
win32ss/drivers/displays/vga/: CMakeLists.txt
win32ss/drivers/miniport/: CMakeLists.txt
win32ss/drivers/miniport/vga/: CMakeLists.txt  vga_reg.inf
